morning week8 day 4 experis

--- a/DS/Vector/makefile
+++ b/DS/Vector/makefile
@@ -1,5 +1,5 @@
 testvector.out: TESTGenericVector.c ../../lib/libvector.a
-	gcc -ansi -pedantic -Wall -Wconversion -Werror -o testvector.out TESTGenericVector.c -L../../lib -lvector 
+	gcc -ansi -pedantic -Wall -Wconversion -o testvector.out TESTGenericVector.c -L../../lib -lvector 
 	
 ../../lib/libvector.a: GenericVector.o
 	ar -cvq ../../lib/libvector.a GenericVector.o
@@ -7,4 +7,5 @@ testvector.out: TESTGenericVector.c ../../lib/libvector.a
 GenericVector.o: GenericVector.c ../../inc/ADTDefs.h ../../inc/GenericVector.h
 	 gcc -ansi -pedantic -Wall -Wconversion -c GenericVector.c
 	
-
+clean:
+	rm testvector.out ../../lib/libvector.a GenericVector.o
