week 11 saturday end of day ubuntu

--- a/IPC/SingleMsgQ/makefile
+++ b/IPC/SingleMsgQ/makefile
@@ -1,14 +1,18 @@
 FLAGS1 = -g -ansi -pedantic -Wall -Wconversion -Werror -o ServerMsgQ.out
 FLAGS2 = -g -ansi -pedantic -Wall -Wconversion -Werror -o ClientMsgQ.out
+FLAGS3 = -g -ansi -pedantic -Wall -Wconversion -Werror -o MyMQWatchdog.out
 
-all: ServerMsgQ.out ClientMsgQ.out
 
-ServerMsgQ.out: ServerMsgQ.c
-	gcc $(FLAGS1) ServerMsgQ.c 
+all: ServerMsgQ.out ClientMsgQ.out MyMQWatchdog.out
+
+ServerMsgQ.out: ServerMsgQ.c 
+	gcc $(FLAGS1) ServerMsgQ.c MyMsgQ.c
 	
-ClientMsgQ.out: ClientMsgQ.c
-	gcc $(FLAGS2) ClientMsgQ.c 
+ClientMsgQ.out: ClientMsgQ.c 
+	gcc $(FLAGS2) ClientMsgQ.c MyMsgQ.c
 
+MyMQWatchdog.out: MyMQWatchdog.c
+	gcc $(FLAGS3) MyMQWatchdog.c MyMsgQ.c
 
 clean:
-	rm ClientMsgQ.out ServerMsgQ.out
+	rm ClientMsgQ.out ServerMsgQ.out MyMQWatchdog.out
