--- a/IPC/ProtectedQueue/makefile
+++ b/IPC/ProtectedQueue/makefile
@@ -2,7 +2,7 @@ FLAGS = -g -ansi -pedantic -Wall -Wconversion -Werror -pthread
 SRC_PATH = ./src/
 INC_PATH = ./inc/
 OBJ_PATH = ./obj/
-objects =  $(OBJ_PATH)ProtectedQueue.o $(OBJ_PATH)PQProducers.o $(OBJ_PATH)PQConsumers.o $(OBJ_PATH)TestPCPQ.o  
+objects =  $(OBJ_PATH)ProtectedQueue.o $(OBJ_PATH)PCPQconfig.o $(OBJ_PATH)PQProducers.o $(OBJ_PATH)PQConsumers.o $(OBJ_PATH)TestPCPQ.o  
 
 
 
@@ -13,15 +13,10 @@ TestPCPQ: $(objects)
 	
 $(OBJ_PATH)TestPCPQ.o: $(SRC_PATH)TestPCPQ.c $(INC_PATH)ProtectedQueue.h \
 									$(INC_PATH)PQProducers.h \
-										$(INC_PATH)PQConsumers.h				
+										$(INC_PATH)PQConsumers.h \
+											$(INC_PATH)PCPQconfig.h				
 	gcc $(FLAGS) -c  $(SRC_PATH)TestPCPQ.c 
 	mv TestPCPQ.o $(OBJ_PATH)
-
-
-
-$(OBJ_PATH)ProtectedQueue.o: $(SRC_PATH)ProtectedQueue.c $(INC_PATH)ProtectedQueue.h
-	gcc $(FLAGS) -c  $(SRC_PATH)ProtectedQueue.c
-	mv ProtectedQueue.o $(OBJ_PATH)
 
 
 
@@ -33,9 +28,21 @@ $(OBJ_PATH)PQConsumers.o: $(SRC_PATH)PQConsumers.c $(INC_PATH)ProtectedQueue.h \
 
 
 $(OBJ_PATH)PQProducers.o: $(SRC_PATH)PQProducers.c $(INC_PATH)ProtectedQueue.h \
-													$(INC_PATH)PQProducers.h
+													$(INC_PATH)PQProducers.h $(INC_PATH)PCPQconfig.h
 	gcc $(FLAGS) -c  $(SRC_PATH)PQProducers.c
 	mv PQProducers.o $(OBJ_PATH)
+
+
+
+$(OBJ_PATH)PCPQconfig.o: $(SRC_PATH)PCPQconfig.c $(INC_PATH)PCPQconfig.h
+	gcc $(FLAGS) -c  $(SRC_PATH)PCPQconfig.c
+	mv PCPQconfig.o $(OBJ_PATH)
+
+
+
+$(OBJ_PATH)ProtectedQueue.o: $(SRC_PATH)ProtectedQueue.c $(INC_PATH)ProtectedQueue.h
+	gcc $(FLAGS) -c  $(SRC_PATH)ProtectedQueue.c
+	mv ProtectedQueue.o $(OBJ_PATH)
 
 
 
