--- a/MT/CDR/Code/Feeder/makefile
+++ b/MT/CDR/Code/Feeder/makefile
@@ -1,11 +1,13 @@
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -Werror -pthread 
 OBJ_PATH = ./obj/
 FEEDMNGR_PATH = ./FeederManager/
+READER_PATH = ./Reader/
 DATAGEN_PATH = ../DataGenerator/
 TRNS_PATH = ../Comms/Transmitter/
+RCVR_PATH = ../Comms/Receiver/
 MSGQ_PATH = ../Comms/MsgQueue/
 CHDEFS_PATH = ../Comms/ChannelDefs/
-objects = $(OBJ_PATH)MsgQ.o $(OBJ_PATH)Transmitter.o $(OBJ_PATH)DataGenerator.o $(OBJ_PATH)FeederManager.o
+objects = $(OBJ_PATH)MsgQ.o $(OBJ_PATH)Receiver.o $(OBJ_PATH)Transmitter.o $(OBJ_PATH)DataGenerator.o $(OBJ_PATH)Reader.o $(OBJ_PATH)FeederManager.o
 
 
 TestFeedMngr: $(objects) 
@@ -15,10 +17,22 @@ TestFeedMngr: $(objects)
 
 $(OBJ_PATH)FeederManager.o: $(FEEDMNGR_PATH)FeederManager.c \
 							$(FEEDMNGR_PATH)FeederManager.h \
+							$(READER_PATH)Reader.h \
 							$(DATAGEN_PATH)DataGenerator.h \
-							$(TRNS_PATH)Transmitter.h 		
+							$(TRNS_PATH)Transmitter.h \
+							$(RCVR_PATH)Receiver.h 		
 	gcc $(FLAGS) -c  $(FEEDMNGR_PATH)FeederManager.c 
 	mv FeederManager.o $(OBJ_PATH)
+	
+	
+	
+$(OBJ_PATH)Reader.o: $(READER_PATH)Reader.c \
+							$(READER_PATH)Reader.h \
+							$(DATAGEN_PATH)DataGenerator.h \
+							$(TRNS_PATH)Transmitter.h \
+							$(RCVR_PATH)Receiver.h 		
+	gcc $(FLAGS) -c  $(READER_PATH)Reader.c 
+	mv Reader.o $(OBJ_PATH)	
 	
 	
 	
@@ -34,6 +48,14 @@ $(OBJ_PATH)Transmitter.o: $(TRNS_PATH)Transmitter.c \
 							$(MSGQ_PATH)MsgQ.h
 	gcc $(FLAGS) -c  $(TRNS_PATH)Transmitter.c 
 	mv Transmitter.o $(OBJ_PATH)
+	
+
+
+$(OBJ_PATH)Receiver.o: $(RCVR_PATH)Receiver.c \
+							$(RCVR_PATH)Receiver.h \
+							$(MSGQ_PATH)MsgQ.h
+	gcc $(FLAGS) -c  $(RCVR_PATH)Receiver.c 
+	mv Receiver.o $(OBJ_PATH)
 	
 
 
