week14 end of day2 experis
Former-commit-id: 7b6f28c25c0afc244e6f4eb17c92e1c93ff420db

--- a/MT/CDR/Code/CDRProcessor/makefile
+++ b/MT/CDR/Code/CDRProcessor/makefile
@@ -1,4 +1,4 @@
-FLAGS = -g -ansi -pedantic -Wall -Wconversion -Werror -pthread 
+FLAGS = -g -ansi -pedantic -Wall -Wconversion -Werror -pthread -m32
 OBJ_PATH = ./obj/
 PROCMNGR_PATH = ./ProcessingManager/
 PROC_PATH = ./Processor/
