changed cdrProc to not use IPC NO WAIT
Former-commit-id: 285ad4da2fc27fb4c951dcf7d2793a7df1360af0

--- a/MT/CDR/Code/CDRProcessor/makefile
+++ b/MT/CDR/Code/CDRProcessor/makefile
@@ -29,7 +29,8 @@ $(OBJ_PATH)ProcessingManager.o: $(PROCMNGR_PATH)ProcessingManager.c \
 $(OBJ_PATH)Processor.o: $(PROC_PATH)Processor.c \
 							$(PROC_PATH)Processor.h \
 							$(RCVR_PATH)Receiver.h \
-							$(ACCUM_PATH)Accumulator.h 	
+							$(ACCUM_PATH)Accumulator.h \
+							$(CHDEFS_PATH)ChannelDefs.h	
 	gcc $(FLAGS) -c  $(PROC_PATH)Processor.c 
 	mv Processor.o $(OBJ_PATH)
 	
