week 16 sunday morning1
Former-commit-id: bffe6d71833389efb8b1a5ed5fb9337b14816f3d

--- a/C++/MemoryManager/makefile
+++ b/C++/MemoryManager/makefile
@@ -11,7 +11,12 @@ TestMemManager: $(objects)
 	g++ $(FLAGS) -o TestMemManager  $(objects) 
 
 
-memPool_t.o: $(PAGE_PATH)memPage_t.cpp $(POOL_PATH)memPool_t.cpp $(PAGE_PATH)memPage_t.h $(POOL_PATH)memPool_t.h $(MNGR_PATH)memManager_t.h 		
+TestMemManager.o: TestMemManager.cpp $(POOL_PATH)memPool_t.cpp $(POOL_PATH)memPool_t.h
+	g++ $(FLAGS) -c  TestMemManager.cpp
+
+
+memPool_t.o: $(PAGE_PATH)memPage_t.cpp $(POOL_PATH)memPool_t.cpp \
+				$(PAGE_PATH)memPage_t.h $(POOL_PATH)memPool_t.h $(MNGR_PATH)memManager_t.h 		
 	g++ $(FLAGS) -c  $(POOL_PATH)memPool_t.cpp 
 	
 	
