exception handler template
Former-commit-id: 58c0e93f2d1e609643b8b15a16e7d6f94d810edb

--- a/C++/MemoryManager/makefile
+++ b/C++/MemoryManager/makefile
@@ -3,6 +3,7 @@ FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
 PAGE_PATH = ./memPage_t/
 POOL_PATH = ./memPool_t/
 MNGR_PATH = ./memManager_t/
+TEXCEPTION_PATH = ../ExceptionHandler/
 
 objects = memManager_t.o memPage_t.o memPool_t.o TestMemManager.o
 
@@ -11,7 +12,7 @@ TestMemManager: $(objects)
 	g++ $(FLAGS) -o TestMemManager $(objects) 
 
 
-TestMemManager.o: TestMemManager.cpp $(POOL_PATH)memPool_t.cpp $(POOL_PATH)memPool_t.h
+TestMemManager.o: TestMemManager.cpp $(POOL_PATH)memPool_t.cpp $(POOL_PATH)memPool_t.h $(TEXCEPTION_PATH)TException_t.h
 	g++ $(FLAGS) -c  TestMemManager.cpp
 
 
