end of day 2 week 18122423
Former-commit-id: c7c5c8282072fd87f46227073ecf3e385cc5c67b

--- a/C++/virtIO/makefile
+++ b/C++/virtIO/makefile
@@ -28,7 +28,7 @@ virtIO_t.o: $(VIRT_PATH)virtIO_t.cpp $(VIRT_PATH)virtIO_t.h
 	
 	
 clean:
-	rm TESTVirtIO $(objects)	
+	rm TESTVirtIO asciiFile binFile $(objects)	
  
 
 
