end of wednesday
Former-commit-id: c95ccb8c1e1d26719b7baddfdfc847a6b13f6feb

--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -1,24 +1,24 @@
 [AAA]
-type = Phillips;SD;z705
-room = room_2_b
-floor = 6
+type = Phillips_SD101
+room = room_2_a
+floor = 1
 log = SD
 config = FIRE
 
 [BBB]
-type = Phillips;Door;aag
+type = Phillips_SD202
 room = room_2_b
 floor = 2
 config = SMOKE
 
 [CCC]
-type = Samsung;SD;o998
-room = room_2_b
-floor = 6
+type = Samsung_SD999
+room = room_2_c
+floor = 3
 log = SD
 
 [DDD]
-type = Samsung;SD;o998
-floor = 6
-room = room_2_b
+type = Samsung_SD666
+floor = 4
+room = room_2_d
 
