--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -1,24 +1,15 @@
-[AAA]
-type = Phillips_SD101
+[Sony_SD101_1]
+type = SONY_SD101
 room = room_2_a
 floor = 1
 log = SD
 config = FIRE
 
-[BBB]
-type = Phillips_SD202
+[Sony_SD101_2]
+type = SONY_SD101
 room = room_2_b
-floor = 2
-config = SMOKE
-
-[CCC]
-type = Samsung_SD999
-room = room_2_c
-floor = 3
+floor = 1
 log = SD
+config = FIRE
 
-[DDD]
-type = Samsung_SD666
-floor = 4
-room = room_2_d
 
