New smarthome with makefile
Former-commit-id: 2cd0cd3cce3a172fdf81200a0d40411f95f65dbe

--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -10,6 +10,18 @@ type = SONY_SD101
 room = room_2_b
 floor = 1
 log = SD
+
+[Sony_SD101_3]
+type = SONY_SD101
+room = room_2_c
+floor = 1
 config = FIRE
+
+[Sony_SD101_4]
+type = SONY_SD101
+room = room_2_d
+floor = 1
+
+
 
 
