smarthome with mutex and condVar
Former-commit-id: f634b27b9c8059596f12226d6bc697733d2957a4

--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -2,25 +2,15 @@
 type = SONY_SD101
 room = room_2_a
 floor = 1
-log = SD
-config = FIRE
+log = FIRE
+config = sensitivity = 80
 
-[Sony_SD101_2]
-type = SONY_SD101
-room = room_2_b
+[Hitachi_SPRINK2000_1]
+type = HITACHI_SPRINK2000
+room = room_2_a
 floor = 1
-log = SD
-
-[Sony_SD101_3]
-type = SONY_SD101
-room = room_2_c
-floor = 1
-config = FIRE
-
-[Sony_SD101_4]
-type = SONY_SD101
-room = room_2_d
-floor = 1
+log = FIRE
+config = waterPressure = 95
 
 
 
