first multithreaded version
Former-commit-id: ac15d02ea30d58c26cc4284583521fc02cf7fa53

--- a/C++/SmartHome/Code/makefile
+++ b/C++/SmartHome/Code/makefile
@@ -1,4 +1,4 @@
-FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
+FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32 -pthread
 AGENT_PATH = ./Agent/
 AGENT_ATTR_PATH = ./AgentAttr/
 CONFLOAD_PATH = ./ConfigLoader/
