new makefile, new prints to cout
Former-commit-id: 0e644fe682db9e338db1487eabd714c984275acb

--- a/C++/SmartHome/Code/makefile
+++ b/C++/SmartHome/Code/makefile
@@ -1,3 +1,4 @@
+objects = EventAttr.o Event.o AgentAttr.o Agent.o Hub.o ConfigLoader.o SmartHome.o EyalsSmartHome.o
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32 -pthread
 AGENT_PATH = ./Agent/
 AGENT_ATTR_PATH = ./AgentAttr/
@@ -7,9 +8,16 @@ EVENT_ATTR_PATH = ./EventAttr/
 HUB_PATH = ./Hub/
 SMART_HOME_PATH = ./SmartHome/
 
-objects = EventAttr.o Event.o AgentAttr.o Agent.o Hub.o ConfigLoader.o SmartHome.o EyalsSmartHome.o
+agentObjects = EventAttr.o Event.o AgentAttr.o Agent.o Hub.o
+AGENT_FLAGS = -c -ansi -pedantic -Wall -Wconversion -m32 -fPIC
+SO_FLAGS = -shared
+HIT_SPNK_PATH = ./SO/AGENTS/HITACHI_SPRINK2000/
+SONY_SD101_PATH = ./SO/AGENTS/SONY_SD101/
 
-EyalsSmartHome: $(objects) 
+all:EyalsSmartHome HITACHI_SPRINK2000.so SONY_SD101.so
+
+#EyalsSmartHome: $(objects) HITACHI_SPRINK2000.o HITACHI_SPRINK2000.so SONY_SD101.o SONY_SD101.so
+EyalsSmartHome: $(objects)
 	g++ $(FLAGS) -o EyalsSmartHome $(objects) -ldl
 
 EyalsSmartHome.o: EyalsSmartHome.cpp $(SMART_HOME_PATH)SmartHome.h $(CONFLOAD_PATH)ConfigLoader.h 
@@ -38,9 +46,43 @@ ConfigLoader.o: $(CONFLOAD_PATH)ConfigLoader.cpp $(CONFLOAD_PATH)ConfigLoader.h 
 	
 SmartHome.o: $(SMART_HOME_PATH)SmartHome.cpp $(SMART_HOME_PATH)SmartHome.h   
 	g++ $(FLAGS) -c  $(SMART_HOME_PATH)SmartHome.cpp
+	
+	
+	
+HITACHI_SPRINK2000.o: $(HIT_SPNK_PATH)HITACHI_SPRINK2000.cpp $(EVENT_PATH)Event.h $(EVENT_ATTR_PATH)EventAttr.h\
+                       $(AGENT_PATH)Agent.h $(HUB_PATH)Hub.h $(AGENT_ATTR_PATH)AgentAttr.h 
+	g++ $(AGENT_FLAGS) $(HIT_SPNK_PATH)HITACHI_SPRINK2000.cpp	
+	
+HITACHI_SPRINK2000.so: HITACHI_SPRINK2000.o
+	g++ -shared -o HITACHI_SPRINK2000.so HITACHI_SPRINK2000.o\
+						Agent.o AgentAttr.o Hub.o Event.o EventAttr.o
+	mv HITACHI_SPRINK2000.so ./SO/HITACHI_SPRINK2000.so
+	
+SONY_SD101.o: $(SONY_SD101_PATH)SONY_SD101.cpp $(EVENT_PATH)Event.h $(EVENT_ATTR_PATH)EventAttr.h\
+                       $(AGENT_PATH)Agent.h $(HUB_PATH)Hub.h $(AGENT_ATTR_PATH)AgentAttr.h 
+	g++ $(AGENT_FLAGS) $(SONY_SD101_PATH)SONY_SD101.cpp	
+	
+SONY_SD101.so: SONY_SD101.o
+	g++ -shared -o SONY_SD101.so SONY_SD101.o\
+						Agent.o AgentAttr.o Hub.o Event.o EventAttr.o
+	mv SONY_SD101.so ./SO/SONY_SD101.so
+#	mv SONY_SD101.o ./obj/SONY_SD101.o
+#	mv HITACHI_SPRINK2000.o ./obj/HITACHI_SPRINK2000.o
+#	mv EyalsSmartHome.o ./obj/EyalsSmartHome.o
+#	mv EventAttr.o ./obj/EventAttr.o
+#	mv Event.o ./obj/Event.o
+#	mv AgentAttr.o ./obj/AgentAttr.o
+#	mv Agent.o ./obj/Agent.o
+#	mv Hub.o ./obj/Hub.o
+#	mv ConfigLoader.o ./obj/ConfigLoader.o
+#	mv SmartHome.o ./obj/SmartHome.o
+
 
 clean:
-	rm EyalsSmartHome $(objects)	
+	rm EyalsSmartHome $(objects) SONY_SD101.o ./SO/SONY_SD101.so \
+							HITACHI_SPRINK2000.o ./SO/HITACHI_SPRINK2000.so
+#clean:
+#	rm EyalsSmartHome
  
 
 
