improved ini file
Former-commit-id: 1aabbd3073d27db55590c156df454b6e62be7f1f

--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -3,14 +3,21 @@ type = SONY_SD101
 room = room_2_a
 floor = 1
 log = FIRE
-config = sensitivity = 80
+config = 3
+
+[Sony_SD101_2]
+type = SONY_SD101
+room = room_7_t
+floor = 171
+log = FIRE
+config = 1.5
 
 [Hitachi_SPRINK2000_1]
 type = HITACHI_SPRINK2000
 room = room_2_a
 floor = 1
 log = FIRE
-config = waterPressure = 95
+config = FIRE,room_2_a,1,FIRE,room_7_t,171
 
 
 
