--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -5,19 +5,13 @@ floor = 1
 log = FIRE
 config = 3
 
-[Sony_SD101_2]
-type = SONY_SD101
-room = room_7_t
-floor = 171
-log = FIRE
-config = 1.5
-
 [Hitachi_SPRINK2000_1]
 type = HITACHI_SPRINK2000
 room = room_2_a
 floor = 1
 log = FIRE
-config = FIRE,room_2_a,1,FIRE,room_7_t,171
+config = FIRE,1,room_2_a,FIRE,171,room_7_t
+
 
 
 
