near the end of smarthome
Former-commit-id: 8e45f39cca110a6fc2ffe6ec7b054ca4a3e5aefc

--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -5,12 +5,33 @@ floor = 1
 log = FIRE
 config = 3
 
+[Sony_SD101_2]
+type = SONY_SD101
+room = room_7_t
+floor = 171
+log = FIRE
+config = 1
+
+[Sony_SD101_3]
+type = SONY_SD101
+room = room_1_b
+floor = 4
+log = FIRE
+config = 5
+
 [Hitachi_SPRINK2000_1]
 type = HITACHI_SPRINK2000
 room = room_2_a
 floor = 1
 log = FIRE
-config = FIRE,1,room_2_a,FIRE,171,room_7_t
+config = FIRE,1,room_2_a,FIRE,171,room_7_t 
+
+[Hitachi_SPRINK2000_2]
+type = HITACHI_SPRINK2000
+room = room_2_a
+floor = 1
+log = FIRE
+config = FIRE,4,room_1_b
 
 
 
